feat: implement JWT authentication and role-based access control (admin/member)